# redact-pdf

./: .gitignore  LICENSE  README.md  pyproject.toml
src/redact/: __init__.py  __main__.py  bulk.py  cli.py  manifest.py  preview.py  rasterize.py  redactor.py  sanitize.py  scanner.py  verify.py
tests/: conftest.py  test_bulk.py  test_cli.py  test_expansion.py  test_form_fields.py  test_glyph_and_xfa.py  test_hardening.py  test_manifest.py  test_redactor.py  test_scanner.py  test_verification.py
