[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "redact-pdf"
version = "0.1.0"
description = "A secure, two-phase PDF redaction CLI. Finds sensitive text, lets you review, then permanently destroys it."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Gabor Csapo" },
]
keywords = ["pdf", "redaction", "privacy", "security", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Legal Industry",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9",
    "pymupdf>=1.23",
    "pikepdf>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "reportlab>=4.0",
]

[project.scripts]
redact = "redact.cli:app"

[project.urls]
Homepage = "https://github.com/gaborcsapo/redact-pdf"
Repository = "https://github.com/gaborcsapo/redact-pdf"
Issues = "https://github.com/gaborcsapo/redact-pdf/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/redact"]

[tool.pytest.ini_options]
testpaths = ["tests"]
